force-app/main/default/objects/Business_Dossier__c/fields/Structure__c.field-meta.xml
<CustomField>
    <fullName>Structure__c</fullName>
    <description>Information regarding the structure of the organization DutchBusinessStructure.</description>
    <label>Structure</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>