force-app/main/default/objects/Business_Dossier__c/fields/Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>Telephone_Number__c</fullName>
    <description>Telephone number of the establishment.  The first 3 characters contain the area code (Dutch: ‘netnummer’), the last 7 characters the subscriber number (Dutch: ‘abbonnee nummer’).</description>
    <label>Telephone Number</label>
    <type>Phone</type>
</CustomField>