force-app/main/default/objects/Business_Dossier__c/fields/Trade_Name_45__c.field-meta.xml
<CustomField>
    <fullName>Trade_Name_45__c</fullName>
    <description>Primary name under which the business engages in commercial activity.  Shortened to a maximum of 45 characters.</description>
    <label>Trade Name</label>
    <length>45</length>
    <type>Text</type>
</CustomField>