force-app/main/default/objects/Business_Dossier__c/fields/Trade_Name_Full__c.field-meta.xml
<CustomField>
    <fullName>Trade_Name_Full__c</fullName>
    <description>Primary name under which the business engages in commercial activity.  This is the full name, up to 132 characters long.</description>
    <label>Trade Name Full</label>
    <length>132</length>
    <type>Text</type>
</CustomField>