force-app/main/default/objects/Business_Dossier__c/fields/Trade_Names__c.field-meta.xml
<CustomField>
    <fullName>Trade_Names__c</fullName>
    <description>Alternative trade names used by the establishment.</description>
    <label>Trade Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>