force-app/main/default/objects/Business_Dossier__c/fields/Turnover__c.field-meta.xml
<CustomField>
    <fullName>Turnover__c</fullName>
    <description>The turnover realised in the financial year DutchBusinessMoneyV2</description>
    <label>Turnover</label>
    <length>255</length>
    <type>Text</type>
</CustomField>