force-app/main/default/objects/Business_Dossier__c/fields/Ultimate_Parent_Chamber_Of_Commerce_Nr__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent_Chamber_Of_Commerce_Nr__c</fullName>
    <description>The Chamber of Commerce number of the ultimate parent organization.  This number consists of 8 numbers (e.g., 00123456).  This number can be used to retrieve the ultimate parent organization using: dutchBusinessGetDossierV2 or dutchBusinessGetDossier</description>
    <label>Ultimate Parent Chamber Of Commerce Nr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>