force-app/main/default/objects/Business_Dossier__c/fields/VAT_Number__c.field-meta.xml
<CustomField>
    <fullName>VAT_Number__c</fullName>
    <label>VAT Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>