force-app/main/default/objects/Business_Dossier__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>The year covered in the financial statement</description>
    <label>Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>