force-app/main/default/objects/Business_Dossier__c/recordTypes/Creditsafe.recordType-meta.xml
<RecordType>
    <fullName>Creditsafe</fullName>
    <active>true</active>
    <description>Record type for dossiers coming from CreditSafe itself.</description>
    <label>Creditsafe</label>
</RecordType>