force-app/main/default/objects/Business_Dossier__c/recordTypes/Dutch_Business.recordType-meta.xml
<RecordType>
    <fullName>Dutch_Business</fullName>
    <active>true</active>
    <description>Record type for dossiers coming from Company Info itself.</description>
    <label>Dutch Business</label>
</RecordType>